--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,13 +2,7 @@
 name = "ai-personal-shopping-concierge"
 compatibility_date = "2024-12-24"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = ".next"
+pages_build_output_dir = ".vercel/output/static"
 
 [vars]
 # Add any public environment variables here
-
-[deployment]
-# Configuration for deployments
-# You can set the domain here if managing via Wrangler, 
-# but usually it's easier via the Cloudflare Dashboard for Pages.
-
