--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "pages:build": "npx @cloudflare/next-on-pages",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
     "sync-prd": "ts-node scripts/sync-prd.ts"
   },
   "dependencies": {
@@ -18,21 +18,18 @@
     "dotenv": "^16.3.1",
     "lucide-react": "^0.562.0",
     "next": "15.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.0.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
-    "tailwindcss": "^4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5",
-    "wrangler": "^4.56.0"
+    "wrangler": "^3.99.0"
   }
 }
