--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^5",
     "wrangler": "^3.99.0"
+  },
+  "overrides": {
+    "next": "15.1.0"
   }
 }
