--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,4 @@
-#:schema node_modules/wrangler/config-schema.json
-name = "ai-personal-shopping-concierge"
+name = "shopbot"
 compatibility_date = "2024-12-24"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = ".vercel/output/static"
-
-[vars]
-# Add any public environment variables here
+# Note: For Next.js, Cloudflare Pages is highly recommended over Workers.
