--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
+# Database Configuration (PostgreSQL)
+DATABASE_URL=postgres://user:password@host:port/dbname
+
 # Atlassian / Confluence Configuration
 CONFLUENCE_BASE_URL=https://your-domain.atlassian.net/wiki
 ATLASSIAN_EMAIL=your-email@example.com
