--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^3.0.1",
-    "@ai-sdk/react": "^3.0.3",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
-    "ai": "^6.0.3",
+    "ai": "^2.2.37",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.562.0",
     "next": "15.1.0",
+    "openai": "^6.16.0",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
